--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -15,4 +15,10 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/main_activity_flow_graph" />
 
+    <FrameLayout
+        android:id="@+id/play_screen_frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
