--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F2F2"
     tools:context=".FragmentB">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/textB"
+    <Button
+        android:id="@+id/detailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Fragment B" />
+        android:text="Open Detail" />
 
 </FrameLayout>
