--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="playerBackground">#fefbe3</color>
+    <color name="mainBackground">#112e40</color>
+    <color name="textDefault">#4e4c62</color>
+    <color name="textOrange">#ff7775</color>
+    <color name="buttonBackground">#4e4c62</color>
+    <color name="nav_background">#0097A7</color>
+    <color name="nav_selected">#0083ff</color>
 </resources>
